fix: align win place results evenly

--- a/src/components/RaceResults/RaceResults.css
+++ b/src/components/RaceResults/RaceResults.css
@@ -1,8 +1,13 @@
 .race-results {
   display: grid;
-  grid-template-columns: 1fr 1fr;
+  grid-template-columns: 1fr 0.5fr 0.5fr;
   grid-gap: 1vh;
   margin: 1vh;
+}
+
+.result-dividend {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
 }
 
 .race-result,
